refactor: REST 요청 가중치 재정의 계약 단순화